--- a/css/style.css
+++ b/css/style.css
@@ -47,20 +47,20 @@ button {
 .header__wrapper {
 	display: flex;
 	justify-content: space-between;
-	padding: 16px;
+	padding: clamp(10px, 1.5vw, 15px);
 	position: relative;
 }
 .header__list {
 	display: flex;
 	align-items: center;
-	gap: 20px;
+	gap: clamp(10px, 1vw, 20px);
 	height: 100%;
 	text-transform: uppercase;
 }
 .header__item {
 	padding: 10px 5px;
 	font-weight: 600;
-	font-size: 16px;
+	font-size: clamp(14px, 1.5vw, 16px);
 	position: relative;
 }
 .header__item.active {
@@ -70,7 +70,7 @@ button {
 .header__underlist{
 	position: absolute;
 	top: 35px;
-	padding: 20px;
+	padding: clamp(10px, 1.5vw, 20px);
 	background: #06253d;
 	border-radius: 12px;
 	border: 1px solid #57626c;
@@ -104,7 +104,7 @@ button {
 
 .header__subitem {
 	position: relative;
-	font-size: 16px;
+	font-size: clamp(14px, 1.5vw, 16px);
 	font-weight: 600;
 	line-height: 140%;
 	color: #ffffff;
@@ -136,7 +136,7 @@ button {
 	align-items: center;
 	gap: 10px;
 	font-weight: 600;
-	font-size: 16px;
+	font-size: clamp(14px, 1.5vw, 16px);
 	color: #ffd700;
 	background: linear-gradient(90deg, #00223b 1.44%, #0d6eb9 100%);
 	padding: 5px 15px;
@@ -158,6 +158,9 @@ button {
 .blink:active,
 .header__btn.clicked {
 	animation: none;
+}
+.header__burger-btn {
+	display: none;
 }
 .header__popup {
 	position: absolute;
@@ -206,7 +209,7 @@ button {
 }
 .main__title {
 	font-weight: 700;
-	font-size: clamp(26px, 5vw, 40px);
+	font-size: clamp(26px, 1vw, 40px);
 	line-height: 140%;
 	margin-bottom: 15px;
 	max-width: 620px;
@@ -243,7 +246,7 @@ button {
 .category__title {
 	text-align: center;
 	font-weight: 700;
-	font-size: clamp(20px, 5vw, 36px);
+	font-size: clamp(20px, 1vw, 36px);
 	line-height: 140%;
 	margin-bottom: 15px;
 	color: #fff;
@@ -251,7 +254,7 @@ button {
 .category__text {
 	text-align: center;
 	font-weight: 500;
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	line-height: 140%;
 	max-width: 620px;
 	margin: 0 auto;
@@ -260,7 +263,7 @@ button {
 }
 .category__block {
 	display: flex;
-	gap: 50px;
+	gap: clamp(20px, 2vw, 50px);
 	justify-content: space-between;
 }
 .category__btn-block {
@@ -270,7 +273,7 @@ button {
 	gap: 10px;
 }
 .category__btn {
-	padding: 10px 15px;
+	padding: clamp(5px, 0.6vw, 10px) clamp(7px, 1vw, 15px);
 	display: flex;
 	align-items: center;
 	gap: 20px;
@@ -278,6 +281,7 @@ button {
 	border-radius: 12px;
 	border: 1px solid #57626c;
 }
+
 .category__btn.active {
 	background: #295374;
 }
@@ -287,7 +291,7 @@ button {
 }
 .category__btn span {
 	font-weight: 500;
-	font-size: clamp(16px, 5vw, 22px);
+	font-size: clamp(16px, 1.8vw, 22px);
 	line-height: 140%;
 	color: #fff;
 }
@@ -300,8 +304,8 @@ button {
 }
 .category__item-block {
 	display: flex;
-	gap: 20px;
-	padding: 30px;
+	gap: clamp(10px, 2vw, 20px);
+	padding: clamp(20px, 2vw, 30px);
 	background: #10324c;
 	border-radius: 17px;
 	border: 1px solid #57626c;
@@ -319,17 +323,21 @@ button {
 	flex-direction: column;
 	gap: 10px;
 }
+.category__img-item img{
+	width: 100%;
+	height: auto;
+}
 
 .category__title-item {
 	font-family: 600;
-	font-size: clamp(16px, 5vw, 24px);
+	font-size: clamp(16px, 2vw, 24px);
 	line-height: 140%;
 	color: #fff;
 }
 
 .category__text-item {
 	font-weight: 400;
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 2vw, 16px);
 	line-height: 140%;
 	color: #fff;
 	text-transform: uppercase;
@@ -358,25 +366,27 @@ button {
 /*providers*/
 .providers {
 	background: #113047;
-	padding: 20px 0;
+	padding: clamp(5px, 1vw, 15px) 0;
 }
 .provider__wrapper {
 	display: flex;
 	align-items: center;
+	height: auto;
 	justify-content: space-around;
+	gap:10px;
 }
 .footer {
 	background: #011320;
 }
 
 .footer__main {
-	padding: 30px 0;
+	padding: clamp(10px, 1vw, 30px) 0;
 	display: flex;
 	justify-content: space-between;
 }
 
 .footer__text {
-	padding-top: 15px;
+	padding-top: clamp(5px, 1vw, 15px);
 	font-weight: 400;
 	font-size: 12px;
 	line-height: 140%;
@@ -391,7 +401,7 @@ button {
 	font-weight: 600;
 	line-height: 140%;
 	color: #fff;
-	margin-bottom: 20px;
+	margin-bottom:clamp(5px, 1vw, 20px);
 }
 .footer__li a {
 	padding: 5px 0;
@@ -402,16 +412,16 @@ button {
 }
 .footer__title-form {
 	font-weight: 600;
-	font-size: clamp(18px, 5vw, 20px);
+	font-size: clamp(18px, 1vw, 20px);
 	line-height: 140%;
 	color: #ffd700;
-	margin-bottom: 20px;
+	margin-bottom: clamp(10px, 1vw, 20px);
 }
 .footer__line-form {
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 20px;
-	gap: 20px;
+	margin-bottom: clamp(10px, 1vw, 20px);
+	gap: clamp(10px, 1vw, 20px);
 }
 .footer__item-form {
 	display: flex;
@@ -464,32 +474,32 @@ button {
 
 /*text-block*/
 .text-block {
-	padding: 30px 0;
+	padding: clamp(10px, 1vw, 30px) 0;
 }
 .wrapper__text-block {
 	background: #08263c;
 	border-radius: 20px;
 	border: 1px solid #57626c;
-	padding: 30px;
+	padding: clamp(20px, 2vw, 30px);
 }
 
 .title__text-block,
 .main-title__text-block {
-	font-size: clamp(22px, 5vw, 36px);
+	font-size: clamp(22px, 1vw, 36px);
 	font-weight: 700;
 	line-height: 140%;
 	color: #ffffff;
-	margin-bottom: 10px;
+	margin-bottom: clamp(5px, 1vw, 10px);
 }
 
 .text__text-block,
 .main-text__text-block,
 .bottom-text__text-block {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	font-weight: 400;
 	line-height: 150%;
 	color: #ffffff;
-	margin-bottom: 10px;
+	margin-bottom: clamp(5px, 1vw, 10px);
 }
 
 .main-title__text-block {
@@ -514,14 +524,14 @@ button {
 }
 .list-dot__text-block {
 	list-style-type: disc;
-	padding-left: 20px;
+	padding-left: clamp(15px, 2vw, 20px);
 	margin-bottom: 10px;
 }
 .list-num__text-block .item__text-block::marker {
 	font-weight: bold;
 }
 .item__text-block {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	font-weight: 400;
 	line-height: 140%;
 	color: #ffffff;
@@ -529,17 +539,17 @@ button {
 	padding-left: 5px;
 }
 .last-text-block {
-	margin-bottom: 20px;
+	margin-bottom: clamp(10px, 1vw, 20px);
 }
 .item__text-block + .item__text-block {
-	padding-top: 10px;
+	margin-top: clamp(5px, 1vw, 10px);
 }
 .last__element-text-block {
 	margin-bottom: 20px;
 }
 .block-mark__text-block {
 	display: flex;
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	font-weight: 400;
 	line-height: 140%;
 	color: #ffffff;
@@ -560,7 +570,7 @@ button {
 }
 .title__why-demo,
 .title__real-money {
-	font-size: clamp(22px, 5vw, 34px);
+	font-size: clamp(22px, 1vw, 34px);
 	font-weight: 700;
 	line-height: 140%;
 	margin-bottom: 10px;
@@ -569,17 +579,18 @@ button {
 }
 .text__why-demo,
 .text__real-money {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	font-weight: 400;
 	line-height: 140%;
 	width: 900px;
+	max-width: 100%;
 	margin: 0 auto;
 	text-align: center;
 	color: #fff;
 }
 .btn__why-demo {
 	padding-top: 10px;
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	font-weight: 400;
 	line-height: 140%;
 	display: block;
@@ -599,7 +610,7 @@ button {
 	border-radius: 17px;
 	background: #295374;
 	border: 1px solid #b5bfc7;
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1.5vw, 16px);
 	font-weight: 400;
 	line-height: 140%;
 	color: #fff;
@@ -626,14 +637,18 @@ button {
 	gap: 10px;
 	margin-bottom: 10px;
 }
+.head-item__real-money svg {
+	width: 40px;
+	height: 40px;
+}
 .title-item__real-money {
-	font-size: clamp(20px, 5vw, 26px);
+	font-size: clamp(20px, 1vw, 26px);
 	font-weight: 700;
 	line-height: 140%;
 	color: #fff;
 }
 .text-item__real-money {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	font-weight: 400;
 	line-height: 150%;
 	color: #fff;
@@ -643,7 +658,7 @@ button {
 	padding: 30px 0;
 }
 .bonuses__title {
-	font-size: clamp(22px, 5vw, 34px);
+	font-size: clamp(22px, 1vw, 34px);
 	line-height: 140%;
 	font-weight: 700;
 	color: #fff;
@@ -651,7 +666,7 @@ button {
 	text-align: center;
 }
 .bonuses__text {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	line-height: 140%;
 	font-weight: 400;
 	color: #fff;
@@ -661,7 +676,7 @@ button {
 	text-align: center;
 }
 .bonuses__link {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	line-height: 140%;
 	font-weight: 400;
 	color: #fff;
@@ -677,26 +692,26 @@ button {
 	gap: 20px; /* расстояние между элементами */
 }
 .bonuses__item {
-	padding: 20px 20px 30px 20px;
+	padding: clamp(10px, 2vw, 20px);
 	background: #295374;
-	border-radius: 17px;
+	border-radius: clamp(12px, 2vw, 17px);
 	border: 1px solid #b5bfc7;
 	margin: 0 auto;
 	text-align: center;
 	width: 100%;
 }
 .bonuses__item svg {
-	margin-bottom: 10px;
+	margin-bottom: clamp(5px, 1vw, 10px);
 }
 .bonuses__item-title {
-	font-size: clamp(18px, 5vw, 22px);
+	font-size: clamp(18px, 1.5vw, 22px);
 	line-height: 140%;
 	font-weight: 700;
 	color: #fff;
-	margin-bottom: 10px;
+	margin-bottom: clamp(5px, 1vw, 10px);
 }
 .bonuses__item-text {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1.5vw, 16px);
 	line-height: 150%;
 	font-weight: 500;
 	max-width: 400px;
@@ -707,17 +722,18 @@ button {
 	padding: 30px 0px;
 }
 .title__provider-focus {
-	font-size: clamp(22px, 5vw, 34px);
+	font-size: clamp(22px, 1vw, 34px);
 	line-height: 140%;
 	font-weight: 700;
 	color: #fff;
 	margin-bottom: 10px;
 	text-align: center;
 	width: 700px;
+	max-width: 100%;
 	margin: 0 auto;
 }
 .text__provider-focus {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	line-height: 140%;
 	font-weight: 400;
 	color: #fff;
@@ -739,14 +755,14 @@ button {
 	gap: 20px;
 }
 .title-element__provider-focus {
-	font-size: clamp(18px, 5vw, 26px);
+	font-size: clamp(18px, 1vw, 26px);
 	line-height: 140%;
 	font-weight: 700;
 	color: #fff;
 	margin-bottom: 10px;
 }
 .text-element__provider-focus {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	line-height: 150%;
 	font-weight: 400;
 	color: #fff;
@@ -757,14 +773,14 @@ button {
 	border: 1px solid #57626c;
 }
 .title-why__provider-focus {
-	font-size: clamp(22px, 5vw, 30px);
+	font-size: clamp(22px, 1vw, 30px);
 	line-height: 140%;
 	font-weight: 700;
 	color: #fff;
 	margin-bottom: 10px;
 }
 .text-why__provider-focus {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	line-height: 140%;
 	font-weight: 400;
 	color: #fff;
@@ -775,7 +791,7 @@ button {
 	padding: 30px 0;
 }
 .practical__title {
-	font-size: clamp(22px, 5vw, 34px);
+	font-size: clamp(22px, 1vw, 34px);
 	font-weight: 700;
 	line-height: 140%;
 	color: #fff;
@@ -783,7 +799,7 @@ button {
 	text-align: center;
 }
 .practical__text {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	font-weight: 400;
 	line-height: 150%;
 	color: #fff;
@@ -798,30 +814,36 @@ button {
 	align-items: center;
 	gap: 10px;
 }
+.practical__element svg {
+	width: 30px;
+	height: 30px;
+}
 .practical__element + .practical__element {
 	margin-top: 10px;
 }
 .practical__element-text {
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	font-weight: 400;
 	line-height: 150%;
 	color: #fff;
 }
 /*faq*/
-
+.faq{
+	padding: clamp(10px, 1vw, 30px) 0;
+}
 .faq__title {
-	font-size: clamp(26px, 5vw, 36px);
+	font-size: clamp(26px, 1vw, 36px);
 	font-weight: 700;
 	line-height: 140%;
 	text-align: center;
-	margin-bottom: 20px;
+	margin-bottom: clamp(10px, 1vw, 20px);
 }
 .faq__title span {
 	color: #ffc700;
 }
 .faq__accordion {
 	margin-bottom: 15px;
-	padding: 20px 40px;
+	padding: clamp(10px, 1.5vw, 15px) clamp(20px, 1vw, 40px);
 	background: #10324c;
 	border: 1px solid #57626c;
 	border-radius: 17px;
@@ -830,9 +852,10 @@ button {
 .faq__menu-button {
 	width: 100%;
 	color: #ffffff;
-	font-size: clamp(16px, 5vw, 20px);
+	font-size: clamp(16px, 1vw, 20px);
 	font-weight: 600;
 	display: flex;
+	gap: 10px;
 	justify-content: space-between;
 	align-items: center;
 	border: none;
@@ -862,7 +885,7 @@ button {
 
 .faq__content {
 	padding: 0 20px;
-	font-size: clamp(14px, 5vw, 16px);
+	font-size: clamp(14px, 1vw, 16px);
 	font-weight: 400;
 	line-height: 18px;
 	transition: 0.4s;
@@ -871,4 +894,121 @@ button {
 }
 .faq__content p + p {
 	margin-top: 15px;
+}
+#mlb2-30764281.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-checkboxRow {
+	margin: 0 !important;
+}
+@media (max-width: 1250px) {
+	.footer__text{
+		width: 335px;
+	}
+}
+
+@media (max-width: 1100px) {
+	.footer__list{
+		order: 2;
+	}
+	.footer__main{
+		flex-wrap: wrap;
+		gap: 10px;
+	}
+	.footer__content{
+		 order: 3;
+		 flex: 0 1 100%;
+	}
+	.footer__text{
+		width: 100%;
+	}
+	.category__btn svg{
+		width: 40px;
+		height: 40px;
+	}
+	.header__sublist,
+	.header__underlist{
+	width: 200px;
+	}
+	.header__underlist{
+		right: -185px;
+		top: -10px;
+	}
+}
+@media (max-width: 950px){
+.header__btn svg{
+	width: 20px;
+	height: 25px;
+}
+
+}
+@media (max-width: 850px){
+	.header__list{
+		display: none;
+	}
+	.header__burger-btn {
+		display: flex;
+	}
+	.header__right{
+		gap: 15px;
+		display: flex;
+		align-items: center;
+	}
+	.category__block{
+		 flex-direction: column;
+	}
+	.category__btn-block{
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+	}
+	.category__btn{
+	 flex-direction: column;
+	 width: 110px;
+	 height: auto;
+	 gap: 5px;
+	 padding: 10px ;
+	}
+	.provider__wrapper svg{
+		max-width: 120px;
+		height: 60px;
+	}
+	
+	.faq__accordion {
+		border-radius: 12px;
+	
+	}
+	.line__why-demo{
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(1, auto);
+	}
+	.item-line__why-demo:nth-child(3) {
+		grid-column: span 2;
+		justify-self: center; /* центрируем по сетке */
+	}
+
+}
+
+@media (max-width: 750px){
+	.bonuses__items {
+	grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+		gap: 10px;
+	}
+	.provider__wrapper svg{
+		max-width: 90px;
+	}
+}
+@media (max-width: 550px){
+.faq__menu-button .icon{
+	width: 13px;
+    height: 10px;
+}
+.bonuses__item svg{
+	height:50px;
+}
+.footer__line-form{
+	flex-direction: column;
+}
+.footer__item-form svg{
+	width:24px;
+	height:24px;
+}
 }
